--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -1,7 +1,7 @@
 /* override tabs.css */
 body {
   overflow: visible ;
-  background-color: #bdbdbd; /* 777788 */
+  background-color: #dbdbdb; /* 777788, bdbdbd */
 }
 
 #you_are_here {
@@ -92,8 +92,9 @@ body {
   color: #486f98;
 }
 
-#levels {
+# {
   position: relative;
+  background-color: #bdbdbd;
 }
 
 .level {
