Slide title CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -63,7 +63,8 @@ body {
 
 .slide .title {
   text-align: center;
-  font-weight: bold;
+  /* font-weight: bold; */
+  font-size: 14pt;
   margin: 1em;
 }
 
