--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -62,6 +62,10 @@ body {
   border: 1px solid #eeeeee;
 }
 
+.slide.reportDataView .related:hover {
+  border-color: #50add6; /* ab light blue */
+}
+
 .slide .title {
   text-align: center;
   /* font-weight: bold; */
