--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -60,6 +60,7 @@ body {
   box-shadow: none;
   text-shadow: none;
   border: 1px solid #eeeeee;
+  margin: 1.8em; /* fit three blocks to a slide */
 }
 
 .slide.reportDataView .related:hover {
