--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -13,7 +13,8 @@
   #set($dataRowFields = $row.getDataRowFields())
   #set($thisUniqueId = $row.getRowId())
   #set($emboldened = false)
-  <div class="related block current" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&set_row_id=$thisUniqueId">
+  ##onclick is workaround for iOS bug http://blog.alanszlosek.com/post/4369588562/jquerys-live-click-handler-on-mobile-safari
+  <div class="related block current" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&set_row_id=$thisUniqueId" onclick=""> 
     #foreach($field in $reportBaseFields)##
       #if(!$field.getTableContainingField().getPrimaryKey().equals($field))
         #set($dataRowField = $dataRowFields.get($field))
