--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -81,12 +81,12 @@ body {
 
 .slide input {
   background: none;
-  border: none;
+  border-style: none;
 }
 
 .slide input:hover {
   background: white;
-  border: auto;
+  border-style: solid;
 }
 
 #search {
