Inputs show as inputs on hover

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -81,12 +81,12 @@ body {
 
 .slide input {
   background: none;
-  border-style: none;
+  border-color: 1px solid rgba(0, 0, 0, 0); /* transparent */
 }
 
 .slide input:hover {
   background: white;
-  border-style: solid;
+  border-color: auto;
 }
 
 #search {
