Inputs show as inputs on hover

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -81,7 +81,7 @@ body {
 
 .slide input {
   background: none;
-  border-color: 1px solid rgba(0, 0, 0, 0); /* transparent */
+  border-color: rgba(0, 0, 0, 0); /* transparent */
 }
 
 .slide input:hover {
