--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/edit.vm
@@ -13,14 +13,18 @@
           #set($primaryKey = $sessionTable.getPrimaryKey())
           #set($dependentTables = $view.getDirectlyDependentTables($sessionTable))
           #foreach($dependentTable in $dependentTables)
-          #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
-            #foreach($report in $dependentTable.getReports())
-              #if(($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
-                <h1>$dependentTable.getSimpleName()</h1>
-                #break ## next table
+            #if($view.loggedInUserAllowedTo("VIEW_TABLE_DATA", $dependentTable))
+              #foreach($report in $dependentTable.getReports())
+                #if(($report.getReportBaseFields().contains($primaryKey)) && (!$report.getReportName().contains("dbvcalc")) && (!$report.getReportName().contains("dbvcrit")))
+                  <div class="dependent_table" id="dependent_table_$dependentTable.getInternalTableName()">
+                    <h1><span class="count"></span>$dependentTable.getSimpleName()</h1>
+                    <div class="record_snippets">
+                    </div>
+                  </div>
+                  #break ## next table
+                #end
               #end
             #end
-          #end
           #end
         </div>
       </section> 
