--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -114,12 +114,14 @@ body {
 
 .dependent_table h1 {
   margin:0;
+  margin-top: 0.2em;
   font-weight: normal;
   font-size:14pt
+  text-transform: lowercase;
 }
 
 .snippet {
-  height: 1em;
+  height: 1.2em;
   width: 100%;
   overflow: hidden;
 }
