--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -116,7 +116,7 @@ body {
   margin:0;
   margin-top: 0.2em;
   font-weight: normal;
-  font-size:14pt
+  font-size:14pt;
   text-transform: lowercase;
 }
 
