dependent snippets: include count

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -118,6 +118,11 @@ body {
   font-weight: normal;
   font-size:14pt;
   text-transform: lowercase;
+  color: gray;
+}
+
+.dependent_table.active h1 {
+  color: black;
 }
 
 .snippet {
