Override relation default to null in edit nav

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -6,7 +6,7 @@
 #else
   #set($reportDataRows = $view.getReportDataRows($report, 100, $filters, true))##
 #end
-<div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true">
+<div class="related block centrebox" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&save_new_record=true&gtpb_override_relation_default_to_null=true">
   <span class="new"><img src="resources/toolbar/new.png"> add new</span>
 </div>
 #foreach($row in $reportDataRows)
@@ -14,7 +14,7 @@
   #set($thisUniqueId = $row.getRowId())
   #set($emboldened = false)
   ##onclick is workaround for iOS bug http://blog.alanszlosek.com/post/4369588562/jquerys-live-click-handler-on-mobile-safari
-  <div class="related block current" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&set_row_id=$thisUniqueId&gtpb_override_relation_default_to_null=true" onclick=""> 
+  <div class="related block current" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$internalTableName&set_row_id=$thisUniqueId" onclick=""> 
     #foreach($field in $reportBaseFields)##
       #if(!$field.getTableContainingField().getPrimaryKey().equals($field))
         #set($dataRowField = $dataRowFields.get($field))
