--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -1,6 +1,7 @@
 #set($report = $sessionData.getReport())
 <div class="breadcrumb_title">$report</div>
-<div id="search"><input name="search" type="search"> search</div>
-<div class="reportDataView">
+#set($filterString = $sessionData.getGlobalFilterString($report))
+<div id="search"><input id="searchbox" name="search" type="search" #if($filterString) value="$filterString" #end> search</div>
+<div class="reportDataView" id="homeContent">
   #parse("gui/edit_nav/report_content.vm")
 </div>
