Use global filter API properly

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report_content.vm
@@ -1,4 +1,6 @@
-## $report must be defined
+#if(!$report)
+  #set($report = $sessionData.getReport())
+#end
 #set($internalTableName = $report.getParentTable().getInternalTableName())
 #set($reportBaseFields = $report.getReportBaseFields())##
 #if(!$filters)
