Hide empty slides

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/dependent_slides.vm
@@ -12,25 +12,28 @@
     #end
   #end
   #if($linkingReports.size() > 0)
-  <div class="slide reportDataView" id="slide_$dependentTable.getInternalTableName()">
-    <img class="rewind" src="resources/edit_nav/rewind.png" />
-    <section class="middle"> 
-      <div class="title">
-      ##$dependentTable.getSimpleName()
-      ##<select name="$dependentTable.getInternalTableName()_select">
-      ##  #foreach($report in $linkingReports)
-      ##    <option value="$report.getInternalReportName()">$report.getModule() - $report</option>
-      ##  #end
-      ##  <option value="$dependentTable.getDefaultReport().getInternalReportName()">all records</option>
-      ##</select>
-      $linkingReports.get(0).getModule() - $linkingReports.get(0)
-      </div>
-      #set($report = $linkingReports.get(0))
-      #set($filters = $viewTools.getNewFilterMap())
-      #set($success = $filters.put($primaryKey, "$sessionRowId"))
-      #parse("gui/edit_nav/report_content.vm")
-    </section>
-  </div>
+    #set($report = $linkingReports.get(0))
+    #set($filters = $viewTools.getNewFilterMap())
+    #set($success = $filters.put($primaryKey, "$sessionRowId"))
+    #set($reportDataRows = $view.getReportDataRows($report, 100, $filters, true))##
+    #if($reportDataRows.size() > 0)
+    <div class="slide reportDataView" id="slide_$dependentTable.getInternalTableName()">
+      <img class="rewind" src="resources/edit_nav/rewind.png" />
+      <section class="middle"> 
+        <div class="title">
+        ##$dependentTable.getSimpleName()
+        ##<select name="$dependentTable.getInternalTableName()_select">
+        ##  #foreach($report in $linkingReports)
+        ##    <option value="$report.getInternalReportName()">$report.getModule() - $report</option>
+        ##  #end
+        ##  <option value="$dependentTable.getDefaultReport().getInternalReportName()">all records</option>
+        ##</select>
+        $report.getModule() - $report
+        </div>
+        #parse("gui/edit_nav/report_content.vm")
+      </section>
+    </div>
+    #end
   #end
 #end
 #end
