Slide separator CSS

--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -223,7 +223,7 @@ body {
 }
 
 .slide .separator {
-	background: url("line.gif") repeat-x scroll 0 16px transparent;
+	background: url("../tabs/line.gif") repeat-x scroll 0 16px transparent;
 }
 
 .slide .separator .fieldname {
