--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -3,7 +3,17 @@
 #set($filterString = $sessionData.getGlobalFilterString($report))
 <div id="navrow">
   <input id="searchbox" name="searchbox" type="search" placeholder="search" internalreportname="$report.getInternalReportName()" #if($filterString) value="$filterString" #end>
-  Jump to: $view.getPopularTables($view.getLoggedInUser())
+  Jump to: 
+  #foreach($table in $view.getPopularTables($view.getLoggedInUser()))
+    #set($tableReports = $table.getReports())
+    #foreach($tableReport in $tableReports)
+      #if($view.loggedInUserAllowedToViewReport($tableReport) && (!$tableReport.getReportName().contains("dbvcalc")) && (!$tableReport.getReportName().contains("dbvcrit")))
+        #set($firstReport = $tableReport)
+        #break
+      #end
+    #end
+    <a class="jumpto_table #if($table.equals($report.getParentTable())) current #end" href="AppController.servlet?return=gui/edit_nav/report&set_table=$table.getInternalTableName()&set_report=$firstReport.getInternalReportName()">$table.getSimpleName()</a>
+  #end
 </div>
 <div class="reportDataView" id="homeContent">
   #parse("gui/edit_nav/report_content.vm")
