Add facility to retrieve popular tables per user: moveUpTo JS -debug

--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -9,6 +9,7 @@
     #foreach($tableReport in $tableReports)
       #if($view.loggedInUserAllowedToViewReport($tableReport) && (!$tableReport.getReportName().contains("dbvcalc")) && (!$tableReport.getReportName().contains("dbvcrit")))
         #set($firstReport = $tableReport)
+        $firstReport
         #break
       #end
     #end
