--- a/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/edit_nav/report.vm
@@ -7,7 +7,7 @@
   #foreach($table in $view.getPopularTables($view.getLoggedInUser()))
     #set($tableReports = $table.getReports())
     #foreach($tableReport in $tableReports)
-      #if($view.loggedInUserAllowedToViewReport($tableReport) && (!$tableReport.getReportName().contains("dbvcalc")) && (!$tableReport.getReportName().contains("dbvcrit")))
+      #if((!$tableReport.equals($table.getDefaultReport())) && ($view.loggedInUserAllowedToViewReport($tableReport)) && (!$tableReport.getReportName().contains("dbvcalc")) && (!$tableReport.getReportName().contains("dbvcrit")))
         #set($firstReport = $tableReport)
         $firstReport
         #break
