--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -170,6 +170,11 @@ body {
   color: #486f98;
 }
 
+#navrow {
+  overflow: hidden;
+  height: 1.4em;
+}
+
 #levels {
   position: relative;
   background-color: #bdbdbd;
