--- a/gtpb_clientside/resources/edit_nav/edit_nav.css
+++ b/gtpb_clientside/resources/edit_nav/edit_nav.css
@@ -172,14 +172,18 @@ body {
 
 #jumpto {
   overflow: hidden;
-  height: 1.4em;
+  height: 2em;
+  position: absolute;
+  left: 30em;
+  height: 20px;
 }
 
 .jumpto_table {
   background: white;
   float: left;
   border: 1px solid #ccc;
-  padding: 0.5em;
+  padding: 2px;
+  height: 16px;
 }
 
 #levels {
